fix(storefront): bctheme-150 fixed issue with store logo on mobile

--- a/assets/scss/layouts/header/_header.scss
+++ b/assets/scss/layouts/header/_header.scss
@@ -167,6 +167,7 @@
 
 .header-logo-image-container {
     position: relative;
+    width: 100%;
 }
 
 .header-logo-image-container:after {
